--- a/myblog/_config.yml
+++ b/myblog/_config.yml
@@ -7,12 +7,12 @@
 
 # Site settings
 title: Your awesome title
-email: yu210148@gmail.com
+email: 
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-baseurl: "/myblog" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://yu210148.github.io" # the base hostname & protocol for your site
 twitter_username: yu210148
 github_username:  yu210148
